# obfuscator

./: README.md  obfuscator.py  pyproject.toml  read_corpus_freq.py  read_corpus_freq_2.py
obfuscator/: __init__.py  cli.py  obf_corpus.py  obfuscator.py
tests/: test_simple.py
